--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,9 @@
 </head>
 <body>
     {{>header}}
-    <img src="./img/R.jpg" alt="">
+    <p class="text2">This app was Created by Rodrigo Costa Valle.</p>
+    <p class="text2">It uses data from mapbox.com and weatherstack.com</p>
+    <p class="text2">Thanks to Andrew Meads from the course "The Complete Node.js Developer Course (3rd Edition)" disponible in Udemy.com</p>
     {{>footer}}
 </body>
 </html>
